[EPI] Fixed typo

--- a/_posts/2019-12-18-even-odd.md
+++ b/_posts/2019-12-18-even-odd.md
@@ -43,4 +43,4 @@ print(A)
 
 # Analysis
 We do a constant amount of processing per entry, so the time complexity is `O(n)`.
-The additional space complexity if `O(1)`.
+The additional space complexity is `O(1)`.
